# yolov9-pip

./: README.md  setup.cfg  setup.py
yolov9/: README.md  __init__.py  benchmarks.py  detect.py  export.py  helpers.py  hubconf.py  train.py  train_dual.py  train_triple.py  val.py  val_dual.py  val_triple.py
yolov9/classify/: predict.py  train.py  val.py
yolov9/models/: common.py  experimental.py  tf.py  yolo.py
yolov9/models/detect/: gelan-e.yaml  yolov7-af.yaml  yolov9-c.yaml  yolov9-e.yaml  yolov9.yaml
yolov9/models/panoptic/: yolov7-af-pan.yaml
yolov9/models/segment/: yolov7-af-seg.yaml
yolov9/panoptic/: predict.py  train.py  val.py
yolov9/segment/: predict.py  train.py  val.py
yolov9/utils/: augmentations.py  autoanchor.py  autobatch.py  callbacks.py  dataloaders.py  downloads.py  general.py  lion.py  loss.py  loss_tal.py  loss_tal_dual.py  loss_tal_triple.py  metrics.py  plots.py  torch_utils.py  triton.py
yolov9/utils/loggers/: __init__.py
yolov9/utils/loggers/clearml/: clearml_utils.py  hpo.py
yolov9/utils/loggers/comet/: __init__.py  comet_utils.py  hpo.py
yolov9/utils/loggers/wandb/: wandb_utils.py
yolov9/utils/panoptic/: augmentations.py  dataloaders.py  general.py  loss_tal.py  metrics.py  plots.py
yolov9/utils/panoptic/tal/: assigner.py
yolov9/utils/segment/: augmentations.py  dataloaders.py  loss.py  loss_tal.py  loss_tal_dual.py  metrics.py  plots.py
yolov9/utils/segment/tal/: assigner.py
yolov9/utils/tal/: anchor_generator.py  assigner.py
