[metadata]
license_files = LICENSE
description_file = README.md

[flake8]
max_line_length = 110
exclude = .tox,*.egg,build,temp,.git,.vscode,__pycache__
recursive = true
doctests = True
verbose = 2
inline-quotes = double
format = pylint
ignore = E,W,F,C,N

[isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
line_length = 110
multi_line_output = 3
include_trailing_comma = true

[yapf]
based_on_style = pep8
spaces_before_comment = 2
COLUMN_LIMIT = 110
SPLIT_BEFORE_FIRST_ARGUMENT = true
COALESCE_BRACKETS = true
SPLIT_BEFORE_LOGICAL_OPERATOR = false

[docformatter]
wrap-summaries = 110
wrap-descriptions = 110
in-place = true
make-summary-multi-line = false
pre-summary-newline = true
force-wrap = false
close-quotes-on-newline = true
